--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "csv-parser": "^1.11.0",
     "dotenv": "^4.0.0",
-    "mail-listener2": "^0.3.1",
+    "mail-listener2": "github:tongrhj/mail-listener2",
     "moment": "^2.19.1",
     "puppeteer": "^0.12.0",
     "slack-node": "^0.1.8",
