--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "shopify-uninstall-reason",
+  "name": "shopify-app-history-parser",
   "version": "1.0.0",
-  "description": "scrap shopify for uninstall reasons",
+  "description": "Export App History from Shopify, Parse, Post to Slack",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js && node email.js && node parse.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js && node email.js && node parse.js"
   },
   "engines": {
-    "node": ">=9.11.1"
+    "node": ">=10.13.0"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jared Tong <tongrhj@users.noreply.github.com>",
+  "license": "MIT",
   "dependencies": {
     "csv-parser": "^1.11.0",
     "dotenv": "^4.0.0",
     "mail-listener2-updated": "^0.3.3",
-    "moment": "^2.19.1",
-    "puppeteer": "^0.12.0",
+    "moment": "^2.22.2",
+    "puppeteer": "^1.11.0",
     "slack-node": "^0.1.8",
     "standard": "^10.0.3",
     "unzip": "^0.1.11"
