--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "csv-parser": "^1.11.0",
     "dotenv": "^4.0.0",
+    "glob": "^7.1.3",
     "mail-listener2-updated": "^0.3.3",
     "moment": "^2.22.2",
     "puppeteer": "^1.11.0",
